<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_delivery_history"
            android:icon="@drawable/ic_history"
            android:title="@string/delivery_history" />
        <item
            android:id="@+id/nav_my_cash"
            android:icon="@drawable/ic_cash"
            android:title="@string/my_cash" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_notify"
                android:icon="@drawable/ic_notify"
                android:title="@string/notifications" />
            <item
                android:id="@+id/nav_call_us"
                android:icon="@drawable/ic_call"
                android:title="@string/call_us" />

        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
