<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">


    <include
        android:id="@+id/xIncldDetails"
        layout="@layout/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/lineStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        style="@style/HeadingTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:weightSum="4">

        <TextView
            style="@style/DetailRTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/item"
            android:textStyle="normal" />

        <TextView
            style="@style/DetailRTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textAlignment="center" />

        <TextView
            style="@style/DetailRTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/price"
            android:textAlignment="gravity" />
    </LinearLayout>

    <View
        style="@style/lineStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/xRecycProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <View
        style="@style/lineStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            style="@style/DetailRTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/total"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/xTvPrice"
            style="@style/DetailRTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/price"
            android:textAlignment="gravity" />
    </LinearLayout>

    <TextView
        style="@style/HeadingTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/payment_status" />

    <TextView
        android:id="@+id/xTvPaymentStatus"
        style="@style/DetailRTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/payment_status" />

    <Button
        android:id="@+id/xBtnStartDelivery"
        style="@style/buttonStyleEnable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/start_delivery" />
</LinearLayout>