<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landingbg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="@dimen/twenty">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/twenty">

            <TextView
                style="@style/textViewHead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten"
                android:text="@string/become_a_partner_now"
                app:layout_constraintBottom_toTopOf="@+id/xTilFName"
                app:layout_constraintEnd_toStartOf="@id/imageView4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xTilFName"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ten"
                android:hint="@string/first_name"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/xTilLName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xEtFName"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xTilLName"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/xTilFName"
                app:layout_constraintTop_toBottomOf="@id/imageView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xEtLName"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xTILPhone"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xTilLName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xEtPhone"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xTILEmail"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xTILPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xEtEmail"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xTILPinCode"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xTILEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xEtPinCode"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/xTILPassword"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xTILPinCode"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xEtPassowrd"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/xCbAadhar"
                style="@style/checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_a_aadhar_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xTILPassword" />

            <CheckBox
                android:id="@+id/xCbDl"
                style="@style/checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_a_driving_licence"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xCbAadhar" />

            <TextView
                android:id="@+id/textView12"
                style="@style/textViewBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/already_a_partner"
                app:layout_constraintEnd_toStartOf="@id/xTvOpenLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xBtnRegister" />


            <TextView
                android:id="@+id/xTvOpenLogin"
                style="@style/textViewColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="10dp"
                android:onClick="openLogin"
                android:text="@string/click_here_to_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView12"
                app:layout_constraintTop_toBottomOf="@id/xBtnRegister" />


            <!-- change the style of the button when every field is correct -->
            <Button
                android:id="@+id/xBtnRegister"
                style="@style/buttonStyleDisable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:onClick="startRegistration"
                android:text="@string/register"
                app:layout_constraintEnd_toStartOf="@id/xProgressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/xCbDl" />

            <ProgressBar
                android:id="@+id/xProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/xBtnRegister"
                app:layout_constraintTop_toBottomOf="@id/xCbDl" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>